# state_machine

./: CMakeLists.txt  README.md  manifest.xml
src/: CMakeLists.txt  Config.cpp  Config.hpp  Dummy.cpp  Dummy.hpp  Events.cpp  Events.hpp  InitState.cpp  InitState.hpp  Main.cpp  NetworkState.cpp  NetworkState.hpp  RPCCall.cpp  RPCCall.hpp  State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp  Transition.cpp  Transition.hpp
test/: CMakeLists.txt  test_Dummy.cpp
viz/: CMakeLists.txt  StateMachineWidget.cpp  StateMachineWidget.hpp  StateMachineWidgetPlugin.cpp  state_machine_viz.pc.in  vizTest.cpp  vizkit_widget.rb
viz/StateMachineWidget/: CMakeLists.txt  README.md
viz/StateMachineWidget/scripts/: test.rb
viz/StateMachineWidget/src/: CMakeLists.txt  CMakeLists.txt~  StateMachineView.cpp  StateMachineView.hpp  StateMachineWidget.cpp  StateMachineWidget.hpp  StateMachineWidgetPlugin.cpp  StateMachineWidgetPlugin.hpp  vizkit_widget.rb
